--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -11,6 +10,7 @@
   <script src="js/script.js"></script>
 </head>
 <body>
+  <!-- 헤더의 포지션을 fixed로 하여 페이지 윗쪽에 띄워 놓는다. -->
   <header>
     <div class="inner">
       <a href="#">
@@ -18,15 +18,17 @@
       </a>
       <nav>
         <ul id="gnb">
-          <li><a href="#">Menu1</a></li>
-          <li><a href="#">Menu2</a></li>
-          <li><a href="#">Menu3</a></li>
-          <li><a href="#">Menu4</a></li>
-          <li><a href="#">Menu5</a></li>
+          <li><a href="#page0">Menu1</a></li>
+          <li><a href="#page1">Menu2</a></li>
+          <li><a href="#page2">Menu3</a></li>
+          <li><a href="#page3">Menu4</a></li>
+          <li><a href="#page4">Menu5</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
+  <!-- 각 페이지에 id를 부여하고 인덱스 번호를 고려하여 0번 부터 정수를 부여한다.  -->
   <div id="page0" style="background-image: url(img/yoga1.jpg);">
     <h2>A Beginner's Class</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur rem earum minima doloribus perferendis, tempora voluptate! Ex adipisci praesentium fugiat facilis et mollitia, velit, voluptates cum distinctio amet accusantium, quia maiores quas temporibus ad numquam suscipit voluptas dolorem totam. Id incidunt optio est eligendi asperiores veniam explicabo. Quasi, illum! Magnam.</p>
@@ -56,71 +58,12 @@
     <div class="copy">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium animi commodi doloremque adipisci eos odio exercitationem autem nisi vitae, deleniti ab nihil consequuntur dolorum magni atque magnam? Minima modi perferendis magnam in dignissimos nemo blanditiis repudiandae dolore error harum officiis veritatis praesentium, fugit reiciendis vero qui et animi distinctio aperiam.
     </div>
-    <div class="sns"></div>
+    <div class="sns">
+      <a href="#"><img class="social" src="img/kakaotalk.png" alt="kakaotalk"></a>
+      <a href="#"><img class="social" src="img/facebook.png" alt="facebook"></a>
+      <a href="#"><img class="social" src="img/instagram.png" alt="instagram"></a>
+    </div>
   </footer>
   <a href="#"><i class="xi-arrow-top gotop"></i></a>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js"></script>
-</head>
-<body>
-  <header>
-    <div class="inner">
-      <a href="#">
-        <img src="https://via.placeholder.com/200x60.png?text=LOGO" alt="Top Logo">
-      </a>
-      <nav>
-        <ul id="gnb">
-          <li><a href="#">Menu1</a></li>
-          <li><a href="#">Menu2</a></li>
-          <li><a href="#">Menu3</a></li>
-          <li><a href="#">Menu4</a></li>
-          <li><a href="#">Menu5</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <div id="page0" style="background-image: url(img/yoga1.jpg);">
-    <h2>A Beginner's Class</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur rem earum minima doloribus perferendis, tempora voluptate! Ex adipisci praesentium fugiat facilis et mollitia, velit, voluptates cum distinctio amet accusantium, quia maiores quas temporibus ad numquam suscipit voluptas dolorem totam. Id incidunt optio est eligendi asperiores veniam explicabo. Quasi, illum! Magnam.</p>
-  </div>
-  <div id="page1" style="background-image: url(img/yoga2.jpg);">
-    <h2>Yoga for Everyone</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur rem earum minima doloribus perferendis, tempora voluptate! Ex adipisci praesentium fugiat facilis et mollitia, velit, voluptates cum distinctio amet accusantium, quia maiores quas temporibus ad numquam suscipit voluptas dolorem totam. Id incidunt optio est eligendi asperiores veniam explicabo. Quasi, illum! Magnam.</p>
-  </div>
-  <div id="page2" style="background-image: url(img/yoga3.jpg);">
-    <h2>Tips Before Your First Yoga Class</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur rem earum minima doloribus perferendis, tempora voluptate! Ex adipisci praesentium fugiat facilis et mollitia, velit, voluptates cum distinctio amet accusantium, quia maiores quas temporibus ad numquam suscipit voluptas dolorem totam. Id incidunt optio est eligendi asperiores veniam explicabo. Quasi, illum! Magnam.</p>
-  </div>
-  <div id="page3" style="background-image: url(img/yoga4.jpg);">
-    <h2>Why Take a Private Yoga Class</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur rem earum minima doloribus perferendis, tempora voluptate! Ex adipisci praesentium fugiat facilis et mollitia, velit, voluptates cum distinctio amet accusantium, quia maiores quas temporibus ad numquam suscipit voluptas dolorem totam. Id incidunt optio est eligendi asperiores veniam explicabo. Quasi, illum! Magnam.</p>
-  </div>
-  <div id="page4" style="background-image: url(img/yoga5.jpg);">
-    <h2>7 Essentials to Bring to Your First Yoga Class</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur rem earum minima doloribus perferendis, tempora voluptate! Ex adipisci praesentium fugiat facilis et mollitia, velit, voluptates cum distinctio amet accusantium, quia maiores quas temporibus ad numquam suscipit voluptas dolorem totam. Id incidunt optio est eligendi asperiores veniam explicabo. Quasi, illum! Magnam.</p>
-  </div>
-  <footer id="page5">
-    <div class="flogo">
-      <a href="#">
-        <img src="https://via.placeholder.com/200x60.png?text=LOGO" alt="Top Logo">
-      </a>
-    </div>
-    <div class="copy">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium animi commodi doloremque adipisci eos odio exercitationem autem nisi vitae, deleniti ab nihil consequuntur dolorum magni atque magnam? Minima modi perferendis magnam in dignissimos nemo blanditiis repudiandae dolore error harum officiis veritatis praesentium, fugit reiciendis vero qui et animi distinctio aperiam.
-    </div>
-    <div class="sns"></div>
-  </footer>
-  <a href="#"><i class="xi-arrow-top gotop"></i></a>
-</body>
->>>>>>> 69d52939213f9364e83a1a4cd11826a6de78f390
 </html>
